[gd_scene load_steps=6 format=3 uid="uid://cn5gj33n4t341"]

[ext_resource type="Script" path="res://game.gd" id="1_14odh"]

[sub_resource type="Animation" id="Animation_nj6x3"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.01875),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.03125),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dl316"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.9925),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vdgvh"]
_data = {
"fade_in": SubResource("Animation_nj6x3"),
"fade_out": SubResource("Animation_dl316")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ai6d3"]
size = Vector2(2589, 1558)

[node name="Node2D" type="Node2D"]
position = Vector2(313, 112)
script = ExtResource("1_14odh")
metadata/_edit_vertical_guides_ = [191.0]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(265, 212)

[node name="Play" type="Button" parent="."]
offset_left = 224.0
offset_top = 164.0
offset_right = 333.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 50
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="Play"]
layout_mode = 0
offset_left = -1.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 50
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vdgvh")
}

[node name="ColorRect" type="ColorRect" parent="Transition" node_paths=PackedStringArray("shortcut_context")]
visible = false
offset_left = -632.0
offset_top = -480.0
offset_right = 1959.0
offset_bottom = 1076.0
shortcut_context = NodePath(".")
color = Color(0, 0, 0, 1)

[node name="Skip" type="Button" parent="Transition/ColorRect"]
layout_mode = 0
offset_left = 1780.0
offset_top = 1077.0
offset_right = 2329.0
offset_bottom = 1138.0
theme_override_font_sizes/font_size = 38
text = "Press to Skip"

[node name="Fast_F" type="Button" parent="Transition/ColorRect/Skip"]
layout_mode = 0
offset_left = 1.0
offset_top = 85.0
offset_right = 552.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 38
text = "Press to Fast Foward"

[node name="Pause" type="Button" parent="Transition/ColorRect/Skip/Fast_F"]
layout_mode = 0
offset_left = 2.0
offset_top = 83.0
offset_right = 549.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 38
text = "Press to Pause Cinematic"

[node name="Area2D" type="Area2D" parent="Transition/ColorRect"]
visible = false
position = Vector2(26, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition/ColorRect/Area2D"]
visible = false
position = Vector2(1271, 729)
shape = SubResource("RectangleShape2D_ai6d3")

[node name="Auto" type="Button" parent="Transition/ColorRect"]
offset_left = 96.0
offset_top = 320.0
offset_right = 488.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 38
text = "Auto"

[node name="Manual" type="Button" parent="Transition/ColorRect"]
offset_left = 1780.0
offset_top = 365.0
offset_right = 2334.0
offset_bottom = 426.0
theme_override_font_sizes/font_size = 38
text = "Manual"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Play/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
[connection signal="pressed" from="Transition/ColorRect/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="Transition/ColorRect/Skip/Fast_F" to="." method="_on_fast_foward_pressed"]
[connection signal="pressed" from="Transition/ColorRect/Skip/Fast_F/Pause" to="." method="_on_pause_cinematic_pressed"]
[connection signal="pressed" from="Transition/ColorRect/Auto" to="." method="_on_auto_pressed"]
[connection signal="pressed" from="Transition/ColorRect/Manual" to="." method="_on_manual_pressed"]
